# force-crlf

./: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
